styling refactoring